--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
 <html> 
 
 <head>
-    <meta charset=utf-8/>
+    <link rel="stylesheet" href="style.css">
+    <title>ic-06</title>
 </head>
 
 
 <body>
 
+<h1>JavaScript Part 2</h1>
+
+<div class = "gen">
+    <svg width="300" height="300" style="border:1px solid black">
+    <circle id = "my_circle" cx="250" cy="80" r="30", fill  = "blue"/>
+    <line id = "my_line" x1="0" y1="280" x2="300" y2="280" stroke="blue" stroke-width="20"/>
+    </svg>
+    <br>
+    <button id = "btn" onclick = "changeColor()">Change Line Color</button>
+
+</div>
+
+<script src = "main.js" ></script>
 
 </body>
+
 
 </html>
